@@ -19,9 +19,9 @@ import java.util.Map;
 @RequiredArgsConstructor
 @Slf4j
 public class FlightService {
-    
+
     private final FlightClient flightClient;
-    
+
     /**
      * Search for flights and convert to FlightOption entities
      */
@@ -30,53 +30,59 @@ public class FlightService {
                                                   java.time.LocalDate returnDate,
                                                   Integer adults, Integer children) {
         log.info("Searching flights: {} -> {}, departing {}", origin, destination, departureDate);
-        
+
         return flightClient.searchFlights(origin, destination, departureDate, returnDate, adults, children)
                 .map(response -> {
                     List<FlightOption> options = new ArrayList<>();
-                    
+
                     try {
                         @SuppressWarnings("unchecked")
                         List<Map<String, Object>> data = (List<Map<String, Object>>) response.get("data");
-                        
+
                         if (data != null) {
                             for (Map<String, Object> offer : data) {
                                 FlightOption option = parseFlightOffer(offer);
                                 if (option != null) {
                                     options.add(option);
+                                    log.info("Parsed flight: {} {} from {} to {} at {}",
+                                            option.getAirline(),
+                                            option.getFlightNumber(),
+                                            option.getOriginAirport(),
+                                            option.getDestinationAirport(),
+                                            option.getDepartureTime());
                                 }
                             }
                         }
                     } catch (Exception e) {
                         log.error("Error parsing flight offers", e);
                     }
-                    
+
                     return options;
                 })
                 .onErrorReturn(new ArrayList<>());
     }
-    
+
     /**
-     * Parse Amadeus flight offer into FlightOption entity
+     * Parse flight offer into FlightOption entity
      */
     private FlightOption parseFlightOffer(Map<String, Object> offer) {
         try {
             FlightOption option = new FlightOption();
-            
+
             @SuppressWarnings("unchecked")
             List<Map<String, Object>> itineraries = (List<Map<String, Object>>) offer.get("itineraries");
             if (itineraries == null || itineraries.isEmpty()) {
                 return null;
             }
-            
-            Map<String, Object> firstItinerary = itineraries.getFirst();
+
+            Map<String, Object> firstItinerary = itineraries.get(0); // <-- исправлено
             @SuppressWarnings("unchecked")
             List<Map<String, Object>> segments = (List<Map<String, Object>>) firstItinerary.get("segments");
-            
+
             if (segments != null && !segments.isEmpty()) {
-                Map<String, Object> firstSegment = segments.getFirst();
+                Map<String, Object> firstSegment = segments.get(0); // <-- исправлено
                 Map<String, Object> lastSegment = segments.get(segments.size() - 1);
-                
+
                 option.setAirline((String) firstSegment.get("carrierCode"));
                 option.setFlightNumber((String) firstSegment.get("number"));
                 Map<String, Object> dep = (Map<String, Object>) firstSegment.get("departure");
@@ -84,65 +90,65 @@ public class FlightService {
 
                 option.setOriginAirport((String) dep.get("iataCode"));
                 option.setDestinationAirport((String) arr.get("iataCode"));
-                
-                String depTime = (String) ((Map<String, Object>) firstSegment.get("departure")).get("at");
-                String arrTime = (String) ((Map<String, Object>) lastSegment.get("arrival")).get("at");
-                
+
+                String depTime = (String) dep.get("at");
+                String arrTime = (String) arr.get("at");
+
                 option.setDepartureTime(LocalDateTime.parse(depTime, DateTimeFormatter.ISO_DATE_TIME));
                 option.setArrivalTime(LocalDateTime.parse(arrTime, DateTimeFormatter.ISO_DATE_TIME));
-                
+
                 String duration = (String) firstItinerary.get("duration");
                 option.setDurationMinutes(parseDuration(duration));
                 option.setStops(segments.size() - 1);
             }
-            
+
             @SuppressWarnings("unchecked")
             Map<String, Object> price = (Map<String, Object>) offer.get("price");
             if (price != null) {
                 option.setPrice(BigDecimal.valueOf(Double.parseDouble(price.get("total").toString())));
                 option.setCurrency((String) price.get("currency"));
             }
-            
+
             @SuppressWarnings("unchecked")
             List<Map<String, Object>> travelerPricings = (List<Map<String, Object>>) offer.get("travelerPricings");
             if (travelerPricings != null && !travelerPricings.isEmpty()) {
                 String cabinClass = (String) travelerPricings.get(0).get("cabin");
                 option.setCabinClass(cabinClass != null ? cabinClass : "ECONOMY");
             }
-            
+
             option.setProviderId((String) offer.get("id"));
             option.setCreatedAt(LocalDateTime.now());
-            
+
             return option;
         } catch (Exception e) {
             log.error("Error parsing flight offer", e);
             return null;
         }
     }
-    
+
     private Integer parseDuration(String duration) {
         // Parse PT14H30M format to minutes
         try {
             duration = duration.replace("PT", "");
             int hours = 0;
             int minutes = 0;
-            
+
             if (duration.contains("H")) {
                 String[] parts = duration.split("H");
                 hours = Integer.parseInt(parts[0]);
                 duration = parts.length > 1 ? parts[1] : "";
             }
-            
+
             if (duration.contains("M")) {
                 minutes = Integer.parseInt(duration.replace("M", ""));
             }
-            
+
             return hours * 60 + minutes;
         } catch (Exception e) {
             return 0;
         }
     }
-    
+
     /**
      * Add flight options to an itinerary
      */
